Updating link to point to master instead

--- a/_includes/rightbar.html
+++ b/_includes/rightbar.html
@@ -1,6 +1,6 @@
 <div id="side">
   <div id="download">
-    <a class="install" href="o.exe">Install OpenWrap</a>
+    <a class="install" href="https://github.com/OpenWrap/openwrap.github.com/raw/master/o.exe">Install OpenWrap</a>
   </div>
   <p>Fork the code, read the wiki and report bugs at <a href="http://github.com/openrasta/openwrap">
     GitHub</a> </p>
