Updating logo and texts, added widgets, updated color schemes, corrects some IE bugs.

--- a/_includes/rightbar.html
+++ b/_includes/rightbar.html
@@ -5,4 +5,44 @@
   <p>Fork the code, read the wiki and report bugs at <a href="http://github.com/openrasta/openwrap">
     GitHub</a> </p>
   <p>OpenWrap is free, open source software (MIT License).</p>
+  <script src="http://widgets.twimg.com/j/2/widget.js"></script>
+  <p>
+<script type="text/javascript">
+//<![CDATA[
+  new TWTR.Widget({
+    version: 2,
+    type: 'search',
+    search: 'openwrap',
+    interval: 6000,
+    title: 'About OpenWrap...',
+    subject: '',
+    width: 250,
+    height: 300,
+    theme: {
+      shell: {
+        background: '#8ec1da',
+        color: '#ffffff'
+      },
+      tweets: {
+        background: '#ffffff',
+        color: '#444444',
+        links: '#1985b5'
+      }
+    },
+    features: {
+      scrollbar: false,
+      loop: true,
+      live: true,
+      hashtags: true,
+      timestamp: true,
+      avatars: true,
+      toptweets: true,
+      behavior: 'default'
+    }
+  }).render().start();
+  //]]>
+</script></p>
+<p>
+<script type="text/javascript" src="http://www.ohloh.net/p/485815/widgets/project_partner_badge.js"></script>
+</p>
 </div>
