--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 ﻿<ul id="nav">
-
   <li class="{% if page.url == '/index.html' %}current{% endif %}"><a href="index.html">Home</a></li>
   <li class="{% if page.url == '/get-started.html' %}current{% endif %}"><a href="get-started.html">Get Started</a></li>
+  <li><a href="http://github.com/openrasta/openwrap/wiki">Documentation</a></li>
   <li class="{% if page.url == '/about.html' %}current{% endif %}"><a href="about.html">About</a></li>
   <li class="{% if page.url == '/credits.html' %}current{% endif %}"><a href="credits.html">Credits</a></li>
 </ul>
